bug fixed: no scrollbars in lists

--- a/yakjs-ui/src/main/style/layout.less
+++ b/yakjs-ui/src/main/style/layout.less
@@ -22,7 +22,12 @@ div, input, li {
 
 
 .list {
-    margin-top: 10px;
+    position: absolute;
+    top: 50px;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    overflow: auto;
 }
 
 .list-item {
